Setup JWT protection of APIs and bug fix on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 .overflow-hidden {
     overflow: auto;
+}
+@media (max-width: 768px) {
+    main{
+    margin-top: 4rem;
+    }
 }
 @media (min-width: 768px) {
     main{
